Thu Jul 15 09:49:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-doxygen.h:
          Added ACE_HAS_POSITION_INDEPENDENT_POINTERS

Thu Jul 15 09:29:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_doxygen.pl:
        * etc/ace_inet.doxygen:
        * html/index.html:
          Added ACE INet library

Thu Jul 15 09:11:51 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-snowleopard.h:
        * include/makeinclude/platform_clang_common.GNU:
        * include/makeinclude/platform_macosx_common.GNU:

          Preliminary support for clang compiler.

Tue Jul 13 14:39:55 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Updated

Tue Jul 13 14:33:23 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Cached_Connect_Strategy_T.h:
        * ace/Capabilities.h:
          Doxygen fixes

Tue Jul 13 14:20:09 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/os_include/os_errno.h:
          Fixed problems with msvc 10, , thanks to Max Zhou
          <earthdog at 126.com> for supplying these changes, this fixes
          bugzilla 3873

Tue Jul 13 11:08:38 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/vc10nmake.mpb:
        * netsvcs/lib/lib.mpc:
          vc10 support, thanks to Max Zhou <earthdog at 126.com> for
          supplying these changes

Mon Jul 12 11:04:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/Activation_Queue.h:
        * ace/Active_Map_Manager.h:
        * ace/Dev_Poll_Reactor.h:
        * ace/Dev_Poll_Reactor.inl:
        * ace/Event_Handler.h:
        * ace/Filecache.h:
        * ace/Manual_Event.h:
        * ace/Map_Manager.h:
        * ace/Mem_Map.h:
        * ace/Message_Block.h:
        * ace/OS_Log_Msg_Attributes.h:
        * ace/OS_NS_unistd.h:
        * ace/Object_Manager.h:
        * ace/Recursive_Thread_Mutex.h: