@@ -1,3 +1,10 @@
+Thu Jul 15 12:35:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * ace/SSL/SSL_SOCK_Stream.h:
+        * ace/SSL/SSL_SOCK_Stream.inl:
+          Added two method overloads available in ACE_SOCK_Stream but
+          missing from ACE_SSL_SOCK_Stream.
+
 Thu Jul 15 09:49:28 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/config-doxygen.h:
